Rigid Body Is Disabled When A New Workspace Is Added #62913

Closed
opened 2019-03-25 07:21:34 +01:00 by Philip Holzmann · 6 comments

System Information
Operating system: Windows 10 64 bit
Graphics card: Nvidia GTX 750 Ti

Blender Version
Broken: (2.80, 79f67acccb, blender2.7, 2019-03-24)

Short description of error
When adding a new workspace (rather than duplicating), all objects lose their rigid body properties.
Additionally, after re-enabling rigid body for an object, when duplicating it repeatedly, duplicates show up at the position where the last duplicate has been placed, rather than where the object is dragged to now.

Exact steps for others to reproduce the error
Default startup.

  • Select the default cube.
  • Enable "Rigid Body" in the physics tab in the properties panel.
  • Play animation (default hotkey: space) for a few frames (e. g. 30), then stop at that frame.
  • On the top, click the "+" to add a new workspace, and select "Video Editing > Video Editing". (Some others will work, too. Duplicate won't.)
  • Go back to the "Layout" workspace.
  • BUG: Observe that the default cube is not a rigid body anymore.

Furthermore, duplicates will appear in unexpected locations. To reproduce that as well, do these additional steps (after doing the steps above).

  • Select the default cube and re-enable "Rigid Body". It jumps back to where it was in the simulation.
  • Duplicate it with Ctrl+D and drag it somewhere, then click to confirm. It will appear in the origin, instead of the place it was dragged to.

Duplicate with Ctrl+D again. The duplicate will now appear in the place you dragged to in the previous step.

I would expect it to appear in the place where it is dragged to immediately. Where the previous duplicate has been placed should have nothing to do with where the next one is placed.

**System Information** Operating system: Windows 10 64 bit Graphics card: Nvidia GTX 750 Ti **Blender Version** Broken: (2.80, 79f67acccb36, blender2.7, 2019-03-24) **Short description of error** When adding a new workspace (rather than duplicating), all objects lose their rigid body properties. Additionally, after re-enabling rigid body for an object, when duplicating it repeatedly, duplicates show up at the position where the last duplicate has been placed, rather than where the object is dragged to now. **Exact steps for others to reproduce the error** Default startup. - Select the default cube. - Enable "Rigid Body" in the physics tab in the properties panel. - Play animation (default hotkey: space) for a few frames (e. g. 30), then stop at that frame. - On the top, click the "+" to add a new workspace, and select "Video Editing > Video Editing". (Some others will work, too. Duplicate won't.) - Go back to the "Layout" workspace. - BUG: Observe that the default cube is not a rigid body anymore. Furthermore, duplicates will appear in unexpected locations. To reproduce that as well, do these additional steps (after doing the steps above). - Select the default cube and re-enable "Rigid Body". It jumps back to where it was in the simulation. - Duplicate it with Ctrl+D and drag it somewhere, then click to confirm. It will appear in the origin, instead of the place it was dragged to. # Duplicate with Ctrl+D again. The duplicate will now appear in the place you dragged to in the previous step. I would expect it to appear in the place where it is dragged to immediately. Where the previous duplicate has been placed should have nothing to do with where the next one is placed.

Added subscriber: @Foaly

Added subscriber: @Foaly
Sergey Sharybin was assigned by Sebastian Parborg 2019-03-25 14:14:09 +01:00
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

Maybe related: #62005

Maybe related: #62005
Sergey Sharybin was unassigned by Brecht Van Lommel 2019-03-26 16:15:24 +01:00
Dalai Felinto was assigned by Brecht Van Lommel 2019-03-26 16:15:24 +01:00

Added subscriber: @Sergey

Added subscriber: @Sergey

This issue was referenced by e760d37733

This issue was referenced by e760d37733e432a698f89388cf446a1f41701424

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#62913
No description provided.