Fix T62913: datablock append removing unrelated rigid body objects.